[gd_scene load_steps=2 format=3 uid="uid://dooqonjbm72i1"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_nk31n"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nk31n")

[node name="New Game" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 136.0
offset_right = 800.0
offset_bottom = 192.0
text = "New Game"

[node name="Load Game" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 240.0
offset_right = 800.0
offset_bottom = 296.0
text = "Load Game"

[node name="Intro Cutscene" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 344.0
offset_right = 800.0
offset_bottom = 400.0
text = "Intro Cutscene"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 448.0
offset_right = 800.0
offset_bottom = 504.0
text = "Quit"

[connection signal="pressed" from="New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Intro Cutscene" to="." method="_on_intro_cutscene_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
